--- a/system/programs/explorer/explorer.css
+++ b/system/programs/explorer/explorer.css
@@ -98,6 +98,7 @@
 	height:100%;
 	border-radius:5px;
 	padding-left:5px;
+	border-color:rgba(236, 240, 241, 0.5);
 }
 #explorer #programs {
 	width:100%;
@@ -145,7 +146,28 @@
 }
 
 #explorer #menusecond .element:hover {
-	border-color:rgba(236, 240, 241,0.5);
+	border-color:rgba(236, 240, 241, 0.5);
 }
 
+#explorer #desktop {
+	position:absolute;
+	top:0;
+	left:0;
+	right:0;
+	bottom:50px;
+	margin:0;
+	padding:0;
+	overflow:hidden;
+	list-style-type: none;
+}
 
+#explorer #desktop .icon {
+	position:absolute !IMPORTANT;
+	width:50px;
+	height:50px;
+}
+
+#explorer #desktop .icon > img {
+	width:100%;
+	height:100%;
+}
