--- a/system/system.css
+++ b/system/system.css
@@ -8,14 +8,16 @@ body {
 	position:fixed;
 	font-family:Arial;
 }
-*:not(input) {
-	cursor:default;
+*:not(textarea):not(input) {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+}
+*:not(input) {
+	cursor:default;
 }
 * {
 	box-sizing:border-box;
