--- a/system/programs/login/login.css
+++ b/system/programs/login/login.css
@@ -5,4 +5,93 @@
 	right:0;
 	bottom:0;
 	background-color:orange;
+	background-image:url(background.jpg);
+	background-size:cover;
+	font-family: 'Ubuntu', sans-serif;
+}
+#login #formwrapper {
+	position:absolute;
+	top:40%;
+	left:100px;
+	width:300px;
+	height:auto;
+}
+#login .login_form {
+	width:100%;
+	cursor:pointer;
+	display:inline-block;
+	overflow:hidden;
+	background-color:transparent;
+	border-radius:10px;
+	padding:10px;
+	height:45px;
+	
+	transition:all 0.15s 0.15s ease-in-out;
+}
+#login .login_form.active {
+	cursor:default;
+	background-color:rgba(0, 0, 0, 0.25);
+	
+	height:115px;
+}
+#login .login_form  > .username {
+	position:relative;
+	cursor:pointer;
+	color:white;
+	font-size:17px;
+	height:55px;
+}
+#login .login_form  > .password {
+	position:relative;
+	display:block;
+	border-radius:5px;
+	border:1px solid white;
+	height:35px;
+	font-size:15px;
+	padding-left:5px;
+	background-color:transparent;
+	width:100%;
+	color:white;
+	left:-150%;
+	
+	transition:all 0.15s ease-in-out;
+}
+#login .login_form.active > .username {
+	cursor:default;
+}
+#login .login_form.active > .password {
+	left:0;
+}
+
+@keyframes flyout {
+	0% {
+		left:0;
+	}
+	100% {
+		left:-150%;
+	}
+}
+@keyframes flyin {
+	0% {
+		left:-150%;
+	}
+	100% {
+		left:0;
+	}
+}
+@keyframes morph_big {
+	0% {
+		height:37px;
+	}
+	100% {
+		height:115px;
+	}
+}
+@keyframes morph_small {
+	0% {
+		height:115px;
+	}
+	100% {
+		height:37px;
+	}
 }
