--- a/system/system.css
+++ b/system/system.css
@@ -6,7 +6,7 @@ body {
 	margin:0;
 	padding:0;
 	position:fixed;
-	font-family:Arial;
+	font-family: 'Ubuntu', sans-serif;
 }
 *:not(textarea):not(input) {
 	-webkit-touch-callout: none;
